docs: update, remove: role
